--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-hash-n-gzip",
-  "version": "2.1.0-1",
+  "version": "2.1.0",
   "description": "Hash and gzip output files",
   "license": "MIT",
   "author": "Shane Holloway",
